--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,12 @@ a:hover{
   float: left;
   margin-right: 30px;
 }
+.forest{
+  width: 400px;
+  width: 50%;
+
+
+}
 
 .team-img{
   width: 25%;
