Changed the Skill Set format

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,16 @@ h2{
 
   padding: 2px;
 }
+.icons{
+  margin-top: 50px;
+  width: 100px;
+}
+.feature-box{
+  padding: 10px;
+}
+.feature-title{
+  padding: 10px;
+}
 
 
 h3{
